# Taskline

./: .gitignore  CHANGELOG.md  Cargo.toml  EXAMPLES.md  LICENSE  README.md  crates.js  cron_parser.rs  deny.toml  errors.rs  help.html  index.html  scheduler.rs  settings.html  src-files.js  task.rs
.github/: PULL_REQUEST_TEMPLATE.md  QUICK_START.md  WORKFLOWS.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  docs.yml  release.yml
benches/: scheduler_benchmarks.rs
cronline/: all.html  constant.VERSION.html  index.html  sidebar-items.js  type.Result.html
cronline/errors/: enum.CronlineError.html  index.html  sidebar-items.js
cronline/events/: enum.SchedulerEvent.html  index.html  sidebar-items.js  struct.EventBus.html
cronline/scheduler/: index.html  struct.Scheduler.html  struct.SchedulerConfig.html
cronline/task/: enum.ScheduleType.html  enum.TaskStatus.html  index.html  sidebar-items.js  struct.Task.html  struct.TaskConfig.html  struct.TaskStats.html  type.TaskFn.html
examples/: advanced_usage.rs  api_polling_scraping.rs  basic_scheduler.rs  cache_warming.rs  database_maintenance.rs  enhanced_features.rs  monitoring_alerting.rs  notification_system.rs  web_integration_axum.rs
search.index/: 00e060122199.js  13fce9d9a790.js  177b96adf257.js  1cf5147064fa.js  1ea615b03915.js  26ce305be4ca.js  2a0f740fbfac.js  310b92c6062b.js  4081631c6fcb.js  44c8fc730a76.js  48b686e41960.js  574cd834a679.js  58a7bb587993.js  5bc087960183.js  5e760b8d8de1.js  6275deb84414.js  63077b628a5e.js  6560f5c868b1.js  65b3fe68b979.js  689828225f7f.js  7133db2f6092.js  731777800e7e.js  75f114147c78.js  7bbbd9149323.js  root.js
search.index/crateNames/: 86b896e9cce0.js
search.index/desc/: 45eacb6d0a82.js
search.index/entry/: 8b5e778b9f4f.js
search.index/function/: 4bc0b44303f3.js
search.index/generic_inverted_index/: fee8c26fcd2d.js
search.index/name/: af75c63d2df3.js
search.index/normalizedName/: d72c66e22785.js
search.index/path/: ae70758f8c6e.js
search.index/type/: d87c60a20953.js
src/: cron_parser.rs  errors.rs  events.rs  lib.rs  scheduler.rs  task.rs
src/cronline/: cron_parser.rs.html  errors.rs.html  events.rs.html  lib.rs.html  scheduler.rs.html  task.rs.html
tests/: integration_tests.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/ops/drop/: trait.Drop.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
type.impl/alloc/boxed/: struct.Box.js
type.impl/core/result/: enum.Result.js
